--- a/ASPNETCoreBlog/ASPNETCoreBlog/appsettings.json
+++ b/ASPNETCoreBlog/ASPNETCoreBlog/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EFCore2ndLevelCache": "10",
+  "ConnectionStrings": {
+    "CWACoreCMS": "Data Source=LAPTOP-S73IQID2\\SQLEXPRESS;Initial Catalog=ASPNETCoreBlogSystem;Integrated Security=true;TrustServerCertificate=true;Trusted_Connection=True"
+  },
+  "IdentitySettings": {
+    "RequireUniqueEmail": true,
+    "RequiredLength": 6
+  }
 }
