--- a/ASPNETCoreBlog/ASPNETCoreBlog/appsettings.json
+++ b/ASPNETCoreBlog/ASPNETCoreBlog/appsettings.json
@@ -13,5 +13,24 @@
   "IdentitySettings": {
     "RequireUniqueEmail": true,
     "RequiredLength": 6
+  },
+  "LayoutCacheTimeInSeconds": "10",
+  "CacheProfiles": {
+    "HomePageCache": {
+      "Duration": 10,
+      "Location": "Client"
+    },
+    "RobotSitemapCache": {
+      "Duration": 43200,
+      "Location": "Client"
+    },
+    "PagesCache": {
+      "Duration": 10,
+      "Location": "Client"
+    },
+    "BlogsCache": {
+      "Duration": 10,
+      "Location": "Client"
+    }
   }
 }
